--- a/styles/banner.css
+++ b/styles/banner.css
@@ -37,7 +37,6 @@
 
     .banner__titulo{
         font-size: 36px;
-        font-weight: 700;
         line-height: 54px;
     }
 
@@ -49,6 +48,22 @@
     .banner__pesquisa::placeholder{
         font-size: 16px;
         background-position: 2em;
+    }
+    
+}
+
+@media screen and (min-width: 1728px) {
+    
+    .banner__pesquisa{
+        width: 35%;
+    }
+
+    .banner__pesquisa::placeholder{
+        background-position: 8em;
+    }
+
+    .banner{
+        padding: 5em 2em;
     }
     
 }
