--- a/styles/carrossel.css
+++ b/styles/carrossel.css
@@ -22,6 +22,58 @@
     margin: .5em 0;
 }
 
+/*---------card--------------*/
+.card__descricao{
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 0.5em;
+}
+
+.card__botoes{
+    display: flex;
+    justify-content: space-between;
+}
+
+.botoes{
+    display: flex;
+}
+
+.card{
+    background: var(--branco);
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    border-radius: 10px;
+    margin: 1em;
+    padding: 1em;
+}
+
+.descricao__titulo{
+    font-weight: 700;
+    color: var(--laranja);
+    margin-top: 0.5em;
+}
+
+.descricao__titulo-livro{
+    color: var(--azul);
+    font-weight: 700;
+    font-size: 18px;
+    margin: 0.5em 0;
+}
+
+.descricao__texto{
+    font-size: 14px;
+}
+
+.botoes__item{
+    margin: 0 0.5em;
+}
+
+.botao__ancora{
+    background-color: var(--laranja);
+    padding: 1em 2.2em;
+    color: var(--branco);
+    font-weight: 700;
+    text-decoration: none;
+}
 
 @media screen and (min-width: 1024px) {
 
@@ -55,6 +107,53 @@
         width: 80%;    
     }
 
+    .card{
+        width: 40%;
+        margin: 3.8em auto 3em;
+    }       
+}
+
+@media screen and (min-width: 1728px) {
     
-    
+    .carrossel__container{
+        display: flex;
+        margin: 0 10vw 3em;
+        align-items: center;
+        
+    }
+
+    .swiper-pagination{
+        margin: 1em 0;
+    }
+
+    .swiper {
+        width: 50%;
+    }
+
+    .carrossel__titulo{
+        font-size: 32px;
+        line-height: 48px;
+    }
+
+    .card{
+        width: 40%;
+        margin-top: 6em;
+        margin-left: 5em;
+    } 
+
+    .descricao {
+        margin-right: 2.5em;
+    }
+
+    .descricao__titulo{
+        font-size: 32px;
+        line-height: 48px;
+    }
+
+    .descricao__texto{
+        font-size: 16px;
+        line-height: 24px;
+    }
+
+   
 }
