--- a/styles/contato.css
+++ b/styles/contato.css
@@ -45,8 +45,7 @@
         padding: 2em 0 3em;
         display: flex;
         justify-content: center;
-        align-items: center;
-        
+        align-items: center;        
     }
 
     .contato__titulo{
@@ -61,6 +60,12 @@
     .contato__descricao {
         margin-right: 5.5em;
         width: 30%;
-    }
-    
+    }    
+}
+
+@media screen and (min-width: 1728px) {
+
+    .contato{
+        padding: 3em 15vw;      
+    }    
 }
