--- a/styles/rodape.css
+++ b/styles/rodape.css
@@ -61,4 +61,12 @@ hr{
     }
 }
 
+@media screen and (min-width: 1728px) {
+    
+    .rodape__lista {
+        border-left: 1px solid var(--cinza-escuro);
+        padding-left: 1em;
+    }
+}
+
 
