--- a/styles/topicos.css
+++ b/styles/topicos.css
@@ -54,6 +54,19 @@
     }
 }
 
+@media screen and (min-width: 1728px) {    
+    
+    .topicos {
+        padding: 1em 25vw 4.5em;
+    }
+
+    .topicos__titulo {
+        font-size: 32px;
+        line-height: 48px;
+        margin-top: 1em;        
+    }
+}
+
 
 
 
