--- a/styles/header.css
+++ b/styles/header.css
@@ -7,6 +7,14 @@
     display: inline-block;
 }
 
+.container__botao:checked~.container__rotulo>.cabecalho__menu-hamburger {
+    background-image: url("../img/MenuAberto.svg");
+}
+
+.container__botao:checked~.container__rotulo {
+    background: var(--azul-degrade);
+}
+
 .cabeçalho{
     background-color: var(--branco);
     display: flex;
@@ -125,6 +133,24 @@
 
     .opcoes-botao {
         display: none;
+    }
+
+    .opcoes-botao:checked~.opcoes__rotulo>.cabecalho__lista-item {
+        background: var(--azul-degrade);
+        color: var(--branco);      
+    }
+
+    .lista-menu__item {
+        padding: 2em 1em;
+    }
+
+    .lista-menu__item:hover {
+        background: var(--azul-degrade);
+    }
+
+    .lista-menu__item:hover {
+        -webkit-text-fill-color: var(--branco);
+        text-decoration: none;
     }
 }
 
